--- a/vignettes/data_sets.html
+++ b/vignettes/data_sets.html
@@ -227,7 +227,7 @@ img{
 <p>Roettger, T. B., Winter, B., Kirby, J., Grawunder, S., &amp; Grice, M. (2014). Assessing incomplete neutralization of final devoicing in German. Journal of Phonetics, 43: 11- 25.</p>
 <p>Schmitz, D. (2018). Tonal Alignment and Segmental Composition in German. Master’s Thesis. Universität zu Köln, Köln, Germany.</p>
 <p>Schmitz, D. &amp; Esser, J. (2021). SfL: Statistics for Linguistics. URL: <a href="https://github.com/dosc91/SfL" class="uri">https://github.com/dosc91/SfL</a></p>
-<p>Schmitz, D., Baer-Henney, D., &amp; Plag, I. (submitted). Revision invited by Phonetica.</p>
+<p>Schmitz, D., Baer-Henney, D., &amp; Plag, I. (submitted). The duration of word-final /s/ differs across morphological categories in English: Evidence from pseudowords. Revision invited by Phonetica.</p>
 <p>Schmitz, D., Cho, H.-E., &amp; Niemann, H. (2018). Vowel shortening in German as a function of syllable structure. Proceedings of 13. Phonetik und Phonologie Tagung. Humboldt University Berlin, Berlin, 28-29 September, 2017.</p>
 <hr />
 <p><em>Please message the author at <a href="mailto:contact@dominicschmitz.com" class="email">contact@dominicschmitz.com</a> in case of any questions, errors or ideas.</em></p>
